--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 /public/hot
 /public/storage
 /public/images/products
+/public/images/brands
+/public/images/category
+/public/images/auctions
+/public/images/bookings
+/public/images/masterclass
+
+
+
 /storage/*.key
 /vendor
 .env
