--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "pusher/pusher-php-server": "7.0.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
