--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "bootstrap-icons": "^1.9.1",
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.5",
+        "laravel-echo": "^1.14.1",
         "owl.carousel": "^2.3.4",
+        "pusher-js": "^7.4.0",
         "slick-carousel": "^1.8.1",
         "vue-server-renderer": "^2.7.12",
         "vuex-composition-helpers": "^2.0.3"
