--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "jquery": "^3.6.0",
         "jquery-validation": "^1.19.5",
         "laravel-echo": "^1.14.1",
+        "notiwind": "^1.2.6",
         "owl.carousel": "^2.3.4",
         "pusher-js": "^7.4.0",
         "slick-carousel": "^1.8.1",
