--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vuex": "4.0.2"
     },
     "dependencies": {
+        "@kyvg/vue3-notification": "^2.7.0",
         "@vuelidate/core": "^2.0.0",
         "@vuelidate/validators": "^2.0.0",
         "bootstrap-icons": "^1.10.2",
