--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
         "maatwebsite/excel": "^3.1",
+        "mailchimp/marketing": "^3.0",
         "pusher/pusher-php-server": "7.0.2"
     },
     "require-dev": {
