--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@
 /public/images/auctions
 /public/images/bookings
 /public/images/masterclass
-/public/js/app.js
-/public/js/app.css
+# /public/js/app.js
+# /public/js/app.css
 
 
 
